# bonito

./: .env.example  .env.production.example  .env.secrets.example  .gitignore  .sops.yaml  AGENTS.md  ARCHITECTURAL_PATTERNS.md  AZURE_FOUNDRY_SCOPE.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  ENTERPRISE_FEATURES_TEST_REPORT.md  ENTERPRISE_METRICS_REPORT.md  FEATURE-AUDIT.md  FIXES-IMPLEMENTED.md  PATTERNS_INDEX.md  PATTERNS_QUICK_REFERENCE.md  PHASE-12-NOTES.md  PLAN.md  PRODUCTION-HARDENING.md  PRODUCTION_DEPLOYMENT_REPORT.md  PROGRESS.md  README.md  ROADMAP.md  SCALING.md  TASK-SECRETS-AND-VECTORPACK.md  docker-compose.prod.yml  docker-compose.yml  prashant-email.txt  production_stress_test.py  question-for-prashant.txt  stress_test.py  stress_test_final_v2.json  stress_test_results_20260309_140951.json  test_enterprise_performance.py  test_performance_metrics.py
.github/workflows/: ci.yml  deploy.yml  publish-cli.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pytest.ini  railway.json  requirements-test.txt  requirements.txt  start-prod.sh
backend/alembic/: env.py
backend/app/: main.py
backend/docs/: bonito-cli-code-review.md  cli-code-review.md
backend/scripts/: audit_vault_pointers.py  origami_smoke.py  send_openrouter_update.py  send_product_update.py  setup_studio_wheel.py  test_origami.py
backend/tests/: conftest.py  hpa_load_test_results.json  test_agent_engine.py  test_analytics.py  test_audit.py  test_auth.py  test_billing.py  test_bonbon_templates.py  (+19 more)
cli/: CHANGELOG.md  CLI_SPEC.md  README.md  pyproject.toml
cli/bonito_cli/: __init__.py  __main__.py  api.py  app.py  config.py
cli/bonito_cli/commands/: __init__.py  admin.py  agents.py  analytics.py  approval.py  audit.py  auth.py  chat.py  compliance.py  deploy.py  deployments.py  gateway.py  groups.py  init.py  kb.py  mcp.py  memory.py  models.py  plan.py  policies.py  projects.py  providers.py  rbac.py  routing.py  scheduler.py  secrets.py  sso.py
cli/bonito_cli/examples/: enterprise.yaml  multi-provider-failover.yaml  quickstart.yaml  support-agent.yaml
cli/bonito_cli/utils/: auth.py  display.py  feature_gate.py
content/: bonobots-vs-openclaw-vs-nemoclaw-linkedin.md  bonobots-vs-openclaw-vs-nemoclaw-seo.md  bonobots-vs-openclaw-vs-nemoclaw.md  linkedin-comment-dave-bembenek.md
docs/: BONITO-STUDIO-PLAN.md  BONOBOT-ARCHITECTURE.md  BONOBOT-MCP-SPEC.md  BULLETPROOF-BRIEF.md  BULLETPROOF-INTERNAL-BRIEF.md  BULLETPROOF-TIER1-CASE-STUDY.md  BULLETPROOF-USE-CASE-2026-05-01.md  BULLETPROOF-USE-CASE-2026-05-24.md  CALL-PREP-ELLIOT-2026-04-21.md  COOL-IDEAS.md  CRITICAL-PATHS-LOGGING.md  ELLIOT-EQUITY-FRAMEWORK-2026-04-27.md  ENTERPRISE-FEATURES-ARTICLE.md  ENTERPRISE-READINESS.md  KNOWN-ISSUES.md  LOGGING-STRATEGY.md  LOGGING-USAGE.md  MANAGED-AGENTS-PLAN.md  ORIGAMI-ADVERSARIAL-REVIEW.md  ORIGAMI-MVP-PLAN.md  ORIGAMI-NAME-COLLISION.md  PH-LAUNCH-STRATEGY.md  PITCH.md  PRICING-STRATEGY-2026-06.md  PRICING.md  RBAC-AND-GROUPS.md  SECRETS.md  SENTRY.md  SESSION-TRANSCRIPT-PROPOSAL.md  SOC2-ROADMAP.md  SSO-SCOPE.md  STUDIO-COST-ECONOMICS.md  SYSTEM-OBSERVER-ROADMAP.md  TERRAFORM-AZURE-WINDOWS.md  TOKEN-PRICING-SHIFT-TALKING-POINTS.md  USE_CASE_MERIDIAN.md  VAULT-PRODUCTION.md  VECTORBOOST.md  VECTORPACK.md  WALKTHROUGH.md  (+20 more)
frontend/: .env.production  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml
mcp-server/bonito_mcp/: __init__.py  client.py  server.py
scripts/: care-package.py  notion-update.sh  origami-overage-report.py  seed-bonito-knowledge.py  test-api.sh  test-backend.sh  test-frontend.sh  test.sh
secrets/: dev.enc.yaml
vault/: Dockerfile  README.md  config-prod.hcl  config.hcl  entrypoint.sh  init-prod.sh  init.sh
(+576 files in other folders)
