[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonito-cli"
version = "0.1.0"
description = "Bonito CLI — Unified multi-cloud AI management from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Bonito", email = "hello@getbonito.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
keywords = ["ai", "llm", "multi-cloud", "cli", "aws", "azure", "gcp", "bedrock", "vertex-ai", "openai"]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://getbonito.com"
Documentation = "https://getbonito.com/docs"
Repository = "https://github.com/ShabariRepo/bonito"
Issues = "https://github.com/ShabariRepo/bonito/issues"

[project.scripts]
bonito = "bonito_cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["bonito_cli"]
